# prosperity-2026

./: .gitignore  README.md  pyproject.toml  repo_paths.py
ai/: plot_round1_ash_rolling_imbalance.py  plot_round1_mid_bid_ask.py  plot_round1_trade_size_distribution.py  plot_round1_volume_distributions.py  plot_round1_wall_spread.py  plot_round1_wall_spread_dist_rollmedian.py  streamlit_round1_mid_bid_ask.py
src/_dep/: datamodel.py
src/algorithms/examples/: headgehogs_examples.py
src/algorithms/experimenting/: experiment.py
src/algorithms/main /: round_01.py
src/data/ROUND1/merged/: prices_round_1_ASH_COATED_OSMIUM_all_days.csv  prices_round_1_INTARIAN_PEPPER_ROOT_all_days.csv  trades_round_1_ASH_COATED_OSMIUM_all_days.csv  trades_round_1_INTARIAN_PEPPER_ROOT_all_days.csv
src/notebooks/: blank.ipynb
src/sim_classes/: data_structure.py
